--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <button class="btn btn-success">Header</button>
+  <nav class="navbar navbar-light bg-light" style="justify-content: space-around;">
+    <!-- <form class="form-inline" > -->
+      <button class="btn btn-outline-success" style="margin:10px;" type="button">INICIO</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" style="margin:10px;">botoncillo</button>
+    <!-- </form> -->
+  </nav>
 
 </body>
 </html>
