Componente Login operativo

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-light" style="justify-content: space-around;">
+  <nav class="navbar navbar-light bg-success bg-opacity-25" style="justify-content: space-around;">
     <!-- <form class="form-inline" > -->
-      <button class="btn btn-outline-success" style="margin:10px;" type="button">INICIO</button>
-      <button class="btn btn-sm btn-outline-secondary" type="button" style="margin:10px;">botoncillo</button>
+      <button routerLink="" class="btn btn-outline-success" style="margin:10px;" type="button">INICIO</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" style="margin:10px;">MATERIAL MOTOR</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" style="margin:10px;">MATERIAL REMOLCADO</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" style="margin:10px;">ESTACIONES</button>
+      <button routerLink="/login" class="btn btn-sm btn-outline-danger" type="button" style="margin:10px;">LOGIN</button>
     <!-- </form> -->
   </nav>
 
